<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.budgets.BudgetsFragment">

    <ImageView android:id="@+id/budget_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/piechart_icon"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/budget_heading"
        android:layout_width="300dp"
        android:layout_height="85dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/lexend_deca_bold"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/budget_title"
        android:textAppearance="@style/screen_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/budget_icon" />

    <EditText
        android:id="@+id/input_budget_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/text_background"
        android:fontFamily="@font/lexend_deca"
        android:hint="Budget Name"
        android:inputType="text"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/budget_heading" />

    <AutoCompleteTextView
        android:id="@+id/input_budget_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/text_background"
        android:drawableEnd="@drawable/dropdown_icon"
        android:fontFamily="@font/lexend_deca"
        android:hint="Category"
        android:inputType="none"
        android:padding="15dp"
        android:focusable="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_budget_name" />

    <EditText
        android:id="@+id/input_budget_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/text_background"
        android:fontFamily="@font/lexend_deca"
        android:hint="Budget Limit"
        android:inputType="number|numberDecimal"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_budget_category" />

    <EditText
        android:id="@+id/input_budget_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Date"
        android:background="@drawable/text_background"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:fontFamily="@font/lexend_deca"
        android:inputType="none"
        android:clickable="true"
        android:enabled="true"
        android:focusable="false"
        android:drawableEnd="@drawable/calender_icon"
        app:layout_constraintTop_toBottomOf="@id/input_budget_limit"
        app:layout_constraintLeft_toLeftOf="parent"/>

<!--CREATE BUDGET BUTTON-->

    <Button
        android:id="@+id/create_budget_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/lexend_deca"
        android:padding="15dp"
        android:text="@string/budget_button_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_budget_date" />

    <TextView
        android:id="@+id/section_title"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/lexend_deca"
        android:gravity="top"
        android:text="@string/budget_subHeading"
        android:textAppearance="@style/section_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_budget_button" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/budgets_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/section_title" />

</androidx.constraintlayout.widget.ConstraintLayout>