<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_summary"
        android:icon="@drawable/summary_icon"
        android:title="@string/title_summary" />

    <item
        android:id="@+id/navigation_income"
        android:icon="@drawable/income_icon"
        android:title="@string/title_income" />

    <item
        android:id="@+id/navigation_expenses"
        android:icon="@drawable/expenses_icon"
        android:title="@string/title_expenses" />

    <item
        android:id="@+id/navigation_budgets"
        android:icon="@drawable/budgets_icon"
        android:title="@string/title_budgets" />

</menu>